<resources>
    <string name="app_name">TASQ-app</string>

    <string name="priority_prompt">Priority</string>
    <string name="submit_button">SUBMIT</string>
    <string name="add_subtask_text">+ add subtask</string>
    <string name="color_tags_text">Color Tags</string>
    <string name="add_task_submit">Add Task</string>
    <string name="edit_task_submit">SUBMIT</string>
    <string name="weekly_week_of">Week of:</string>
    <string name="address">Address</string>
    <string name="add_an_address_or_location_here">add an address or location here...</string>
    <string name="no_due_date">No due date?</string>

    <string-array name="priority_list">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Extreme</item>
    </string-array>
</resources>