<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--    Left side layout    -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/add_task_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:text="Task Name"
                android:textColor="@color/text_black"/>

            <EditText
                android:id="@+id/edit_task_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_task_label"
                android:layout_alignLeft="@id/add_task_label"
                android:hint="+ add a task..."
                android:textColor="@color/text_grey"/>

            <TextView
                android:id="@+id/due_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_task_name_label"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="Due Date"
                android:textColor="@color/text_black"/>

            <EditText
                android:id="@+id/due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/due_date_label"
                android:layout_alignLeft="@id/due_date_label"
                android:hint="Ex. September 8th"
                android:textColor="@color/text_grey"
                android:visibility="invisible"/>

            <DatePicker
                android:id="@+id/edit_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/due_date_label"
                android:layout_alignParentStart="true"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_alignParentEnd="true"/>


            <TextView
                android:id="@+id/task_priority_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_date_picker"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="Task Priority"
                android:textColor="@color/text_black"/>

            <Spinner
                android:id="@+id/edit_priority_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/priority_prompt"
                android:layout_marginTop="11dp"
                android:entries="@array/priority_list"
                android:layout_below="@id/task_priority_label"
                android:layout_alignLeft="@id/task_priority_label" />

            <TextView
                android:id="@+id/attachments_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_priority_spinner"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:text="Attachments"
                android:textColor="@color/text_black"/>

            <Button
                android:id="@+id/attachments_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_below="@id/attachments_label"
                android:layout_alignLeft="@id/attachments_label"
                android:backgroundTint="@color/button_orange"
                android:text="+ add files"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/subtasks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radiobuttons"
                android:layout_alignStart="@+id/color_tags_label"
                android:layout_alignBaseline="@+id/attachments_label"
                android:text="Subtasks"
                android:textColor="@color/text_black"/>

            <EditText
                android:id="@+id/edit_subtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtasks_label"
                android:layout_alignBaseline="@+id/attachments_button"
                android:layout_alignStart="@id/subtasks_label"
                android:text="@string/add_subtask_text"
                android:textColor="@color/text_grey"/>

            <TextView
                android:id="@+id/color_tags_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/edit_date_picker"
                android:layout_marginEnd="109dp"
                android:layout_marginTop="20dp"
                android:text="@string/color_tags_text"
                android:textColor="@color/text_black"/>

            <RadioGroup
                android:id="@+id/edit_radiobuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/color_tags_label"
                android:layout_alignLeft="@+id/color_tags_label">

                <RadioButton
                    android:id="@+id/edit_redbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="@color/color_tag_red" />

                <RadioButton
                    android:id="@+id/edit_bluebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="@color/color_tag_blue"/>

                <RadioButton
                    android:id="@+id/edit_greenbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="@color/color_tag_green"/>

            </RadioGroup>
            <!--      TODO: add radio button functionality      -->
            <Button
                android:id="@+id/edit_submitbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button_border"
                android:textColor="@color/button_orange"
                android:text="@string/edit_task_submit"
                android:textSize="22sp"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>